[gd_scene load_steps=2 format=3 uid="uid://duq40fp7tjgy"]

[ext_resource type="Script" path="res://scripts/tea_card.gd" id="1_card"]

[node name="TeaCard" type="PanelContainer"]
custom_minimum_size = Vector2(200, 160)
script = ExtResource("1_card")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Header" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "Builder's Tea"
vertical_alignment = 1

[node name="UnlockedIcon" type="TextureRect" parent="MarginContainer/VBoxContainer/Header"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="Costs" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="CostLabel" type="Label" parent="MarginContainer/VBoxContainer/Costs"]
layout_mode = 2
theme_override_colors/font_color = Color(0.65, 0.65, 0.65, 1)
text = "Cost: £0.50"

[node name="PriceLabel" type="Label" parent="MarginContainer/VBoxContainer/Costs"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.8, 0.2, 1)
text = "Price: £2.50"

[node name="QualityContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/QualityContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.65, 0.65, 0.65, 1)
text = "Quality:"

[node name="Stars" type="HBoxContainer" parent="MarginContainer/VBoxContainer/QualityContainer"]
layout_mode = 2

[node name="SatisfactionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.4, 0.4, 1)
text = "Customer Satisfaction: 75%"

[node name="UnlockInfo" type="Label" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.2, 0.2, 1)
text = "Unlocks on Day 3"
